fix scrollbars in chrome (suxs to be Firefox)

--- a/server/vertexshaderart/client/main.less
+++ b/server/vertexshaderart/client/main.less
@@ -2,6 +2,33 @@
 #like, .user, .share {
     cursor: pointer;
 }
+
+textarea::-webkit-scrollbar-track,
+div::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+	background-color: rgba(0,0,0,0);
+}
+
+textarea::-webkit-scrollbar,
+div::-webkit-scrollbar {
+	width: 8px;
+	height: 8px;
+	background-color: rgba(0,0,0,0);
+}
+
+textarea::-webkit-scrollbar-thumb,
+div::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
+	background-color: #000;
+	border: 1px solid #222;
+}
+
+textarea::-webkit-scrollbar-corner,
+div::-webkit-scrollbar-corner {
+	background-color: rgba(0,0,0,0);
+}
+
 .outlinedbutton {
     border: 1px solid #444;
     margin: 0.25em;
